agrego dialogos para que quede mejor el programa

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ add_executable(editor
   main.cpp
   Label.cpp
   LabelMapa.cpp
+  DialogoBienvenida.cpp
   Tabs.cpp
   Mapa.cpp
   ${UIS_HEADERS})
